k8s/order_deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: order-deployment
  namespace: lgcns

spec:
  # 자원공간의 제한 - 낭비 방지, 관리 편의성 제공해주는 옵션
  revisionHistoryLimit: 2

  replicas: 2
  # argocd test
  # git에 push 된건 2개로하고 로컬에서만 3개로 설정 한 후 늘었다가 줄어드는 것 확인
  # replicas: 3

  selector:
    matchLabels:
      app: order-pod

  # pod 관리
  template:
    metadata:
      labels:
        app: order-pod
    spec:
      # docker container
      containers:
        - name: order-container
          # NOTE ECR의 경로
          image: 512138915880.dkr.ecr.us-east-1.amazonaws.com/lgcns-kwang:latest
          ports:
            - containerPort: 8080

          # autoscaler(pod) 작업을 위해서 추가함
          resources:
            # 컨테이너가 사용할수 있는 리소스의 최대치
            limits:
              cpu: "1"
              memory: "500Mi"
            # 컨테이너가 시작될떄 보장받아야 하는 최소 자원
            requests:
              cpu: "0.5"
              memory: "250Mi"

          # NOTE k8s-secret 에 설정한 정보를 외부변수로 application.yml에 전달
---
# core service setting
# core group : pod, service, ConfigMap, Secret, namespace
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: lgcns
spec:
  type: ClusterIP
  selector:
    # pod의 labels/app 과 이름이 일치해야함.
    app: order-pod
  ports:
    # Service의 port
    - port: 80
      # Pod(nginx)의 port
      targetPort: 8080
