k8s/order_redis.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis-deployment
  namespace: lgcns

spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-pod

  # pod 관리
  template:
    metadata:
      labels:
        app: redis-pod
    spec:
      # docker container
      containers:
        - name: redis-container
          image: redis
          ports:
            - containerPort: 6379

---
# core service setting
# core group : pod, service, ConfigMap, Secret, namespace
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: lgcns
spec:
  type: ClusterIP
  selector:
    # pod의 labels/app 과 이름이 일치해야함.
    app: redis-pod
  ports:
    # Service의 port
    - port: 6379
      # Pod(nginx)의 port
      targetPort: 6379
