k8s/order_ingress.yml
# aws nlb -> ingress controller(이것도 하나의 Pod) -> ingress -> service -> pod

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  namespace: lgcns
  annotations:
    # kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx
  rules:
    # 레코드로 등록한 도메인 이름
    - host: server.kwang.cloud
      http:
        paths:
          # http://server.kwang.cloud/
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 80
          # 이런 예시가 될 수 있음
          # - path: /user-service
          # - path: /product-service
          # - path: /order-service
